# SeleniumCapital

./: .gitignore  README.md  conf.py  conftest.py  index.html  pyproject.toml  pytest.ini
.github/workflows/: 1.1_for_windows_US11-01-06.yml  1.1_for_windows_US11-02-02_06.yml  1.2_for_windows_US11-01-06.yml  1_for_ubuntu_all.yml  1_for_windows.yml  1_for_windows_US11-02-02.yml  1_windows_all.yml  2_for_windows_all.yml  2_macos_all.yml  (+14 more)
1/: index.html
10/: index.html
11/: index.html
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
2/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
29/: index.html
3/: index.html
30/: index.html
31/: index.html
32/: index.html
33/: index.html
34/: index.html
35/: index.html
36/: index.html
37/: index.html
38/: index.html
39/: index.html
4/: index.html
40/: index.html
41/: index.html
42/: index.html
43/: index.html
44/: index.html
45/: index.html
46/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
export/: influxDbData.txt
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/: base_page.py  captcha.py  common.py  conditions.py
test_data/: app_store_data.py  cfd_markets.py  google_play_data.py  trading_platform_data.py
tests/: build_dynamic_arg.py  hwinfo.py
(+23304 files in other folders)
